@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/libelf
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libelf/ChangeLog,v 1.27 2009/05/22 14:58:20 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libelf/ChangeLog,v 1.28 2009/11/21 09:24:32 patrick Exp $
+
+*libelf-0.8.12 (21 Nov 2009)
+
+  21 Nov 2009; Patrick Lauer <patrick@gentoo.org> +libelf-0.8.12.ebuild:
+  Bump, fixes #293915
 
   22 May 2009; Alexis Ballier <aballier@gentoo.org> libelf-0.8.10.ebuild:
   keyword ~sparc-fbsd
